--- a/cover1.css
+++ b/cover1.css
@@ -1,10 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.main_container{
+.main_container {
     width: 100%;
     height: 150vh;
     background-color: #b09be6;
@@ -13,26 +13,27 @@
     align-items: center;
 }
 
-.container1{
+.container1 {
     width: 80%;
     height: 80%;
-    background-color:#FFFFFF7D;
+    background-color: #FFFFFF7D;
     border-radius: 15px;
 }
 
-.top{
+.top {
     width: 100%;
     height: 20%;
 }
 
-.main-content{
+.main-content {
     width: 100%;
     height: 70%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
-.img_profile{
+
+.img_profile {
     width: 150px;
     height: 150px;
     margin-left: 40px;
@@ -41,25 +42,27 @@
     object-fit: cover;
     border-radius: 50%;
     border: 5px solid #ffffff;
-    
+
 }
-.fullName{
+
+.fullName {
     font-size: 40px;
     font-weight: 700;
-    font-family: Monda;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 60px;
     margin-left: 262px;
     color: #816ad3;
 }
-.department_name{
+
+.department_name {
     font-size: 20px;
     font-weight: 400;
-    font-family: Monda;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 0;
     margin-left: 374px;
 }
 
-.content-left{
+.content-left {
     width: 49%;
     height: 100%;
     display: flex;
@@ -68,7 +71,8 @@
     color: #816ad3;
     margin-left: 50px;
 }
-.content-right{
+
+.content-right {
     width: 49%;
     height: 100%;
     display: flex;
@@ -76,106 +80,133 @@
     justify-content: space-between;
 }
 
-.card-left1, .card-left2, .card-left3{
-    width: 100%;
-    height: 30%;
+.card-left1,
+.card-left2,
+.card-left3 {
+    width: 80%;
+    height: 32%;
+    border-radius: 20px;
+    background-color: #e4e2f2;
+    padding: 20px 0px;
 }
 
-.card-left1, .card-left2{
+.card-left1,
+.card-left2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: auto;
-    
 }
 
-.content, span{
+.content,
+span {
     width: 100%;
     height: 24%;
-}
-
-.content , span{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-left: 6px;
 }
 
-.icon{
-    width: 20%;
-    height: 100%;
-  
-}
-.text{
-    width: 79%;
-    height: 100%;
-    background-color: rgb(157, 255, 127);
+span {
+    margin-left: 20px;
+    color: #867ed4; 
 }
 
-.card-right1{
+.icon {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #816ad3;
+    padding-right: 10px;
+    font-size: 20px;
+}
+
+.text {
+    width: 79%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+a {
     width: 100%;
+    text-decoration: none;
+}
+
+.card-right1 {
+    width: 95%;
     height: 30%;
-    background-color: rgb(206, 27, 27);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: #e4e2f2;
+    border-radius: 20px;
+
 }
 
-.card-right2{
-    width: 100%;
+.card-right2 {
+    width: 95%;
     height: 69%;
-    background-color: blueviolet;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 20px;
+    background-color: #e4e2f2;
 }
-    
-.phone{
-    margin-right: 400px;
-}
-.map{
-    margin-right: 300px;
-}
-.email{
-    margin-right: 290px;
-    
-}
-img{
+
+img {
     width: 20px;
     height: 20px;
     border-radius: 20px;
 }
-.progress{
-    background-color:white;
-    width: 40%;
-    border-radius: 15px;
-    margin-right: 250px;
+
+.progress {
+    width: 79%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
-.progress_bar1{
+
+.wrapper-progress {
+    width: 90%;
+    background-color: white;
+    border-radius: 15px;
+}
+
+.progress_bar1 {
     width: 100%;
     height: 20px;
 }
-.progress_bar2{
+
+.progress_bar2 {
     width: 70%;
     height: 20px;
 }
-.progress_bar3{
+
+.progress_bar3 {
     width: 50%;
     height: 20px;
 }
-.progress_bar1, .progress_bar2, .progress_bar3{
-    background-color: rgb(103, 75, 160);;
-    color: rgb(103, 75, 160);
+
+.progress_bar1,
+.progress_bar2,
+.progress_bar3 {
+    background-color: #816ad3;
     padding: 1%;
     text-align: right;
     border-radius: 15px;
 }
-.card-left3{
+
+.card-left3 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
 }
 
-.content1{
+.content1 {
     width: 100%;
     height: 19%;
     display: flex;
@@ -183,41 +214,89 @@ img{
     margin-top: 20px;
 }
 
-.progress2{
-    background-color:white;
-    width: 100%;
-    border-radius: 15px;
-    margin-right: 250px;
-   
- }
- .progress2_bar4{
+.progress2_bar1 {
     width: 90%;
-    border-radius: 10px;
     height: 20px;
-    
- }   
-  .progress2_bar5{
-    width: 75%;
-    height: 20px; 
-} 
-.progress2_bar6{
-    width: 60%;
-    height: 20px; 
-} 
-.progress2_bar7{
-    width: 55%;
-    height: 20px;  
+
 }
-.progress2_bar4, .progress2_bar5, .progress2_bar6, .progress2_bar7{
-    background-color: rgb(103, 75, 160);;
+
+.progress2_bar2 {
+    width: 75%;
+    height: 20px;
+}
+
+.progress2_bar3 {
+    width: 60%;
+    height: 20px;
+}
+
+.progress2_bar4 {
+    width: 55%;
+    height: 20px;
+}
+
+.progress2_bar1,
+.progress2_bar2,
+.progress2_bar3,
+.progress2_bar4 {
+    background-color: #816ad3;
     color: rgb(103, 75, 160);
     padding: 1%;
     text-align: right;
     border-radius: 15px;
 }
 
-.content2{
+.content2 {
     width: 100%;
-    height: 24%;
-    background-color: blue;
+    height: 16%;
+    display: flex;
+    margin-right: 185px;
+    margin-top: 10px;
+    align-items: center;
+}
+
+li {
+    margin-left: 30px;
+}
+
+.content3 {
+    width: 100%;
+    height: 16%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.content3 .icon {
+    width: 10%;
+    height: 100%;
+    display: flex;
+    justify-content: right;
+}
+
+.content3 .text {
+    width: 90%;
+    height: 100%;
+    margin-left: 30px;
+}
+
+.content3 .text span {
+    margin-left: 0;
+}
+
+.content4{
+    width: 100%;
+    height: 9%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.text1{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding-left: 50px;
+}
+.text{
+    font-size: 17px;
 }
